Test_20NewsGroup/saved_data/semi_50_one_layer_pinv_batch_1000.out
  File "semi_50_pinv.py", line 1
    >
    ^
SyntaxError: invalid syntax
